<resources>
    <string name="app_name">Vinilos</string>
    <string name="logo">logo</string>
    <string name="loading">Cargando</string>
    <string name="without_connection">Debe tener internet para continuar</string>
    <string name="close">CERRAR</string>
    <string name="on_permissions_granted">onPermissionsGranted:</string>
    <string name="double_point">:</string>
    <string name="permission_denied">onPermissionsDenied:</string>
    <string name="permissions_denied">Debe autorizar todos los permisos para continuar</string>
    <string name="app_slogan">El sitio para almacenar la información de su coleccón de música</string>
    <string name="caratula_1">Caratula 1</string>
    <string name="visitor">Visitante</string>
    <string name="collector">Coleccionista</string>
    <string name="log_initial_setup">El tipo de usuario seleccionado es:&#160;</string>
    <string name="albumes">Álbumes</string>
    <string name="image_album">Imagen del álbum</string>
    <string name="title_default">Titulo Default</string>
    <string name="artist_default">Artista Default</string>
    <string name="artists">Artistas</string>
    <string name="image_artist">Imagen del artista</string>
    <string name="name_default">Nombre default</string>
    <string name="numeral">#</string>
    <string name="title_song">Canción</string>
    <string name="title_duration">Duración</string>
    <string name="dont_have_songs">No tiene canciones</string>
    <string name="date_of_birth">Fecha de nacimiento</string>
    <string name="dont_have_albums">No tiene álbumes</string>
    <string name="label_album">Álbum</string>
    <string name="label_genre">Género</string>
    <string name="collectors">Coleccionistas</string>
    <string name="create_album">Crear álbum</string>
    <string name="associate_tracks">Asociar canciones</string>
    <string name="icon_user">icono de usuario</string>
    <string name="artist_favorite">Artistas favoritos</string>
    <string name="album_create">Álbumes creados</string>
    <string name="name_album">Nombre del álbum</string>
    <string name="url_cover_of_album">URL cover del álbum (jpg o png)</string>
    <string name="release_date">Fecha de lanzamiento</string>
    <string name="description_album">Descripción del álbum</string>
    <string name="name_of_artist">Nombre del artista</string>
    <string name="url_photo_artist">URL foto del artista (jpg o png)</string>
    <string name="description_artist">Descripción del artista</string>
    <string name="birthdate">Fecha de cumpleaños</string>
</resources>