<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vModel"
            type="com.miso.vinilos.features.album.ui.viewModels.AlbumDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:background="@mipmap/ic_background_detail"
        tools:context=".features.album.ui.views.AlbumDetailActivity">

        <Button
            android:id="@+id/btnArrowBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_arrow_back"
            android:layout_marginTop="10dp"
            android:layout_marginStart="-10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/containerImage"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2">

            <ImageView
                android:id="@+id/imageAlbum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_album"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@mipmap/ic_background"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/titleAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helveticaltsdbold"
            android:gravity="center"
            android:textColor="@color/purple_02"
            android:textSize="30sp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerImage"
            tools:text="@string/title_default"/>

        <TextView
            android:id="@+id/artistAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaltstdroman"
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:textColor="@color/gray_01"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleAlbum"
            tools:text="@string/artist_default"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_03"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artistAlbum"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/descriptionAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helveticaltstdroman"
            android:textColor="@color/gray_01"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:text="sakdfjasklñjfsdl asdfñj sdklsf asdjfklsadf asdfjklasdfjkasdfl sdafj jkasdfklasdfj jsflasdjlfds jasfdlk asdfjklasdf asdjl asdfjñf jiowjjasoi xcvjio " />

        <LinearLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/purple_04"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionAlbum">

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/numeral"
                android:textSize="23sp"
                android:fontFamily="@font/helveticaltsdbold"
                android:gravity="center"
                android:textColor="@color/purple_03"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/title_song"
                android:textSize="23sp"
                android:paddingStart="5dp"
                android:fontFamily="@font/helveticaltsdbold"
                android:gravity="center_vertical"
                android:textColor="@color/purple_03"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/title_duration"
                android:textSize="23sp"
                android:fontFamily="@font/helveticaltsdbold"
                android:gravity="center"
                android:textColor="@color/purple_03"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCancionesAlbum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>