<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:contentPadding="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.cardview.widget.CardView
                android:id="@+id/containerImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardCornerRadius="40dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageAlbum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/ic_launcher"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/image_album" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_default"
                android:textColor="@color/purple_02"
                android:fontFamily="@font/helveticaltsdbold"
                android:textSize="20sp"
                android:singleLine="true"
                android:gravity="center"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerImage" />

            <TextView
                android:id="@+id/artistAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist_default"
                android:textColor="@color/gray_01"
                android:fontFamily="@font/helveticaltstdroman"
                android:textSize="18sp"
                android:singleLine="true"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleAlbum" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>